infra-modules/eks/5-security-groups.tf
resource "aws_security_group_rule" "allow_web" {
    type              = "ingress"
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    security_group_id = aws_eks_cluster.this.vpc_config[0].cluster_security_group_id
  }
  
  resource "aws_security_group_rule" "allow_web_node_port" {
    type              = "ingress"
    from_port         = 30010
    to_port           = 30010
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    security_group_id = aws_eks_cluster.this.vpc_config[0].cluster_security_group_id
  }
